--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
+        android:background="@drawable/bg_home"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
@@ -81,13 +81,13 @@
 
                 <ImageButton
                     android:id="@+id/btnCart"
-                    android:layout_width="40dp"
+                    android:layout_width= "40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/bg_circle_semi"
-                    android:src="@drawable/cart"
-                    android:contentDescription="Cart"
-                    android:padding="8dp" />
+                    android:foreground="@null"
+                    android:backgroundTint="@android:color/transparent"
+                    android:src="@drawable/cart_white"
+                    android:contentDescription="Cart" />
 
                 <!-- badge -->
                 <TextView
@@ -95,7 +95,6 @@
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:layout_gravity="top|end"
-                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="2dp"
                     android:background="@drawable/bg_badge_red"
                     android:textColor="@android:color/white"
@@ -126,8 +125,10 @@
                     xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:app="http://schemas.android.com/apk/res-auto"
                     xmlns:tools="http://schemas.android.com/tools"
+                    android:background="@drawable/bg_home"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="140dp"
                     android:layout_marginBottom="20dp"
                     tools:context=".HomeActivity">
 
@@ -172,14 +173,95 @@
 
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:padding="5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:background="@drawable/bg_flash_sale"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/bannerViewPager">
+
+                        <!-- Header -->
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingHorizontal="16dp"
+                            android:paddingVertical="4dp">
+
+                            <!-- Bên trái: Flash Sale + Badge -->
+                            <LinearLayout
+                                android:id="@+id/flashSaleGroup"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:gravity="center_vertical"
+                                android:layout_alignParentStart="true">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="⚡ Flash Sale"
+                                    android:textColor="@android:color/black"
+                                    android:textSize="24sp"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="70% Off"
+                                    android:textColor="@android:color/white"
+                                    android:background="@drawable/bg_badge"
+                                    android:padding="4dp"
+                                    android:layout_marginStart="8dp"
+                                    android:textStyle="bold"
+                                    android:textSize="12sp" />
+                            </LinearLayout>
+
+                            <!-- Bên phải: Countdown -->
+                            <TextView
+                                android:id="@+id/tvCountdown"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="04 : 05 : 18"
+                                android:textStyle="bold"
+                                android:textColor="@android:color/white"
+                                android:background="@drawable/bg_timer"
+                                android:padding="8dp"
+                                android:textSize="16sp"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true" />
+                        </RelativeLayout>
+
+
+                        <!-- Flash Sale RecyclerView -->
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerFlashSale"
+                            android:layout_marginTop="12dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:overScrollMode="never" />
+
+                    </LinearLayout>
+
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/bg_flash_sale"
+                    android:padding="10dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="5dp"
-                    android:paddingHorizontal="20dp">
+                    android:paddingHorizontal="20dp"
+                    android:layout_marginTop="-150dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -403,7 +485,7 @@
                     android:id="@+id/recyclerViewProducts"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="8dp"
                     android:clipToPadding="false"
                     android:paddingHorizontal="16dp"
                     tools:listitem="@layout/item_product" />
