--- a/app/src/main/res/layout/item_checkout_product.xml
+++ b/app/src/main/res/layout/item_checkout_product.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@drawable/bg_category"
+    android:background="#FFFFFF"
     android:padding="8dp">
 
     <ImageView
@@ -11,29 +11,38 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/techshop" />
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:background="@drawable/bg_category"/>
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp">
+        android:orientation="vertical"
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/tvProductName"
             android:text="Tên sản phẩm"
-            android:textSize="16sp"
             android:textStyle="bold"
+            android:textSize="14sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/tvPrice"
-            android:text="46.490.000₫"
+            android:id="@+id/tvProductPrice"
+            android:text="1150000₫"
             android:textColor="#E53935"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"
+            android:textSize="13sp"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tvQuantity"
+            android:text="x1"
+            android:textSize="13sp"
+            android:layout_marginTop="4dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
