--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -16,6 +16,7 @@
         android:background="#FFFFFF"
         android:layout_marginTop="30dp"
         android:padding="16dp"
+        android:paddingTop="30dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <!-- Nút Back -->
