--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -205,7 +205,8 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="⚡ Flash Sale"
+                                    android:text="⚡Flash Sale"
+                                    android:layout_marginTop="2dp"
                                     android:textColor="@android:color/black"
                                     android:textSize="24sp"
                                     android:textStyle="bold" />
@@ -214,6 +215,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="70% Off"
+                                    android:layout_marginTop="2dp"
                                     android:textColor="@android:color/white"
                                     android:background="@drawable/bg_badge"
                                     android:padding="4dp"
