--- a/app/src/main/res/layout/item_product_wishlist.xml
+++ b/app/src/main/res/layout/item_product_wishlist.xml
@@ -45,10 +45,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btnCart" />
 
+            <!-- Nút thêm vào giỏ -->
             <ImageButton
                 android:id="@+id/btnCart"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:background="@drawable/bg_cart_btn"
                 android:padding="8dp"
@@ -58,7 +59,7 @@
                 app:layout_constraintStart_toEndOf="@id/textName"
                 tools:layout_editor_absoluteY="8dp" />
 
-            <!-- Giá -->
+            <!-- Giá sản phẩm -->
             <TextView
                 android:id="@+id/textPrice"
                 android:layout_width="0dp"
@@ -72,6 +73,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/btnCart" />
 
+            <!-- Nút Delete -->
+            <ImageButton
+                android:id="@+id/btnDelete"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/bg_cart_btn"
+                android:padding="6dp"
+                android:src="@drawable/delete"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@id/btnCart"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:contentDescription="Delete" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
