--- a/app/src/main/res/layout/activity_search_detail.xml
+++ b/app/src/main/res/layout/activity_search_detail.xml
@@ -51,18 +51,24 @@
 
     </LinearLayout>
 
-    <ImageButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnFilter"
-        android:layout_width="55dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/bg_search_circle"
-        android:src="@drawable/search"
+        android:layout_width="wrap_content"
+        android:layout_height="42dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/btn_outline"
+        android:drawableStart="@drawable/filter"
+        android:text="Filter"
+        android:textColor="#000000"
+        android:textSize="13sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/searchContainer"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    \
 
 
     <androidx.core.widget.NestedScrollView
@@ -111,7 +117,7 @@
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/r9o6itaym1mt"
                 android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:scaleType="fitCenter"
                 android:src="@drawable/home" />
