--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -11,8 +11,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="44dp">
 
         <ImageView
             android:id="@+id/imageView2"
@@ -92,10 +92,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/edittext_bg"
+            android:drawableEnd="@drawable/eye"
             android:hint="Enter your password"
             android:inputType="textEmailAddress"
             android:padding="10dp"
-            android:drawableEnd="@drawable/eye"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,94 +105,93 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
             android:text="Forgot password?"
             android:textColor="#007AFF"
             android:textSize="13sp"
-            app:layout_constraintTop_toBottomOf="@id/edtPassword"
             app:layout_constraintEnd_toEndOf="@id/edtPassword"
-            android:clickable="true"
-            android:focusable="true"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:layout_marginTop="4dp" />
+            app:layout_constraintTop_toBottomOf="@id/edtPassword" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSignup"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/button_bg"
             android:text="Log in"
             android:textColor="@android:color/white"
             android:textStyle="bold"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="24dp"
-            android:background="@drawable/button_bg"
-            app:layout_constraintTop_toBottomOf="@id/textView6"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/textView6" />
 
         <View
             android:id="@+id/line_left"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="20dp"
             android:background="#DDDDDD"
+            app:layout_constraintBottom_toBottomOf="@+id/textView7"
             app:layout_constraintEnd_toStartOf="@+id/textView7"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView7"
-            app:layout_constraintBottom_toBottomOf="@+id/textView7"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="50dp"/>
+            app:layout_constraintTop_toTopOf="@+id/textView7" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Or"
-            android:textSize="16sp"
-            android:textColor="#888"
             android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@id/btnSignup"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="Or"
+            android:textColor="#888"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/btnSignup" />
 
         <View
             android:id="@+id/line_right"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="#DDDDDD"
-            app:layout_constraintStart_toEndOf="@id/textView7"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView7"
-            app:layout_constraintBottom_toBottomOf="@+id/textView7"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="50dp"/>
+            android:layout_marginEnd="50dp"
+            android:background="#DDDDDD"
+            app:layout_constraintBottom_toBottomOf="@+id/textView7"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/textView7"
+            app:layout_constraintTop_toTopOf="@+id/textView7" />
 
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnGoogle"
             android:layout_width="0dp"
             android:layout_height="55dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/edittext_bg"
+            android:drawableStart="@drawable/google"
+            android:padding="15dp"
             android:text="Login with Google"
             android:textColor="#222222"
-            android:background="@drawable/edittext_bg"
-            app:layout_constraintTop_toBottomOf="@id/textView7"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="24dp"
-            android:drawableStart="@drawable/google"
-            android:padding="15dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView7" />
 
         <LinearLayout
             android:id="@+id/layoutSignup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@id/btnGoogle"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/btnGoogle">
 
             <TextView
                 android:id="@+id/tvNoAccount"
@@ -206,15 +205,14 @@
                 android:id="@+id/tvLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sign up"
-                android:textColor="#1E88E5"
-                android:textStyle="bold"
-                android:textSize="16sp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
                 android:focusable="true"
-                android:background="?attr/selectableItemBackgroundBorderless" />
+                android:text="Sign up"
+                android:textColor="#1E88E5"
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </LinearLayout>
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
