--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
-            android:text="Your Email"
+            android:text="Your Username"
             android:textColor="#222222"
             android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/edittext_bg"
-            android:hint="Enter your email"
+
             android:inputType="textEmailAddress"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,6 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/edittext_bg"
             android:drawableEnd="@drawable/eye"
-            android:hint="Enter your password"
             android:inputType="textEmailAddress"
             android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
