--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -180,28 +180,28 @@
                                 android:textSize="22sp"
                                 android:textStyle="bold" />
 
-                            <TextView
-                                android:id="@+id/tvOldPrice"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="37.990.000 ₫"
-                                android:layout_marginStart="8dp"
-                                android:textColor="#9E9E9E"
-                                android:textSize="14sp" />
+<!--                            <TextView-->
+<!--                                android:id="@+id/tvOldPrice"-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:text="37.990.000 ₫"-->
+<!--                                android:layout_marginStart="8dp"-->
+<!--                                android:textColor="#9E9E9E"-->
+<!--                                android:textSize="14sp" />-->
 
-                            <TextView
-                                android:id="@+id/tvDiscount"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="-10%"
-                                android:layout_marginStart="8dp"
-                                android:background="@drawable/bg_discount"
-                                android:textColor="@android:color/white"
-                                android:textSize="12sp"
-                                android:paddingLeft="6dp"
-                                android:paddingRight="6dp"
-                                android:paddingTop="2dp"
-                                android:paddingBottom="2dp" />
+<!--                            <TextView-->
+<!--                                android:id="@+id/tvDiscount"-->
+<!--                                android:layout_width="wrap_content"-->
+<!--                                android:layout_height="wrap_content"-->
+<!--                                android:text="-10%"-->
+<!--                                android:layout_marginStart="8dp"-->
+<!--                                android:background="@drawable/bg_discount"-->
+<!--                                android:textColor="@android:color/white"-->
+<!--                                android:textSize="12sp"-->
+<!--                                android:paddingLeft="6dp"-->
+<!--                                android:paddingRight="6dp"-->
+<!--                                android:paddingTop="2dp"-->
+<!--                                android:paddingBottom="2dp" />-->
                         </LinearLayout>
 
                         <!-- Icon trái tim bên phải -->
