--- a/app/src/main/res/layout/item_buy.xml
+++ b/app/src/main/res/layout/item_buy.xml
@@ -39,13 +39,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/tvOldPrice"
-                android:text="300.000đ"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="14sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+<!--            <TextView-->
+<!--                android:id="@+id/tvOldPrice"-->
+<!--                android:text="300.000đ"-->
+<!--                android:textColor="@android:color/darker_gray"-->
+<!--                android:textSize="14sp"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content" />-->
 
             <TextView
                 android:id="@+id/tvStock"
