--- a/app/src/main/res/layout/activity_rate_product.xml
+++ b/app/src/main/res/layout/activity_rate_product.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".RateProductActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -109,13 +108,15 @@
                 </LinearLayout>
 
                 <!-- Product Quality Rating -->
+
+                <!-- Add Photo / Video -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_marginBottom="16dp"
                     android:background="@android:color/white"
-                    android:padding="16dp"
-                    android:layout_marginBottom="16dp">
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -130,15 +131,14 @@
                         style="?android:attr/ratingBarStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
                         android:numStars="5"
                         android:rating="5"
-                        android:stepSize="1"
-                        android:layout_marginTop="8dp" />
+                        android:stepSize="1" />
 
 
                 </LinearLayout>
 
-                <!-- Add Photo / Video -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
