--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -49,6 +49,14 @@
             android:backgroundTint="@color/blue"
             android:textColor="#FFFFFF"
             android:minHeight="36dp"/>
+        <Button
+            android:id="@+id/btnReview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Review"
+            android:backgroundTint="@color/blue"
+            android:textColor="#FFFFFF"
+            android:minHeight="36dp"/>
     </LinearLayout>
 
 </LinearLayout>
